--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -22158,8 +22158,8 @@ form p:last-child {
 [type="checkbox"]:not(:checked),
 [type="checkbox"]:checked {
     position: absolute;
-    left: -9999px;
-    opacity: 0;
+    /* left: -9999px;
+    opacity: 0; */
 }
 
 [type="checkbox"] {
